agregado de img en la parte de ofertas de index, boxshadow a los productos y cambios en la disposicion del index

--- a/index.html
+++ b/index.html
@@ -101,22 +101,22 @@
                 <h1>Ofertas de temporada</h1>
                 <div class="mainindex__sec3__contenedorpro">
                     <div class="mainindex__sec3__contenedorpro__hijo">
-                        <img src="img/20201005_102315-011-d3f2f4f3fdb63064dd16019077095110-1024-1024.png"
-                            alt="foto de remera simple">
-                        <h2>Remera simple</h2>
+                        <img src="img/ofer1.png"
+                            alt="remera celeste conm rayas blancas">
+                        <h2>LightC</h2>
                         <p><span class="s1">20$</span> <span>15$</span></p>
                         <button type="button" class="btn btn-primary">Comprar</button>
                     </div>
                     <div class="mainindex__sec3__contenedorpro__hijo">
-                        <img src="img/D_NQ_NP_799976-MLU45233593360_032021-O.png"
-                            alt="foto de remera con estampado pequeño">
-                        <h2>Remera con estampado pequeño</h2>
+                        <img src="img/ofer2.png"
+                            alt="jean azul oscuro">
+                        <h2>JeansD</h2>
                         <p><span class="s1">30$</span> <span>20$</span></p>
                         <button type="button" class="btn btn-primary">Comprar</button>
                     </div>
                     <div class="mainindex__sec3__contenedorpro__hijo">
-                        <img src="img/TX04.png" alt="foto de remera con estampado grande">
-                        <h2>Remera con estampado grande</h2>
+                        <img src="img/ofer3.png" alt="brazalete celeste">
+                        <h2>BrazaC</h2>
                         <p><span class="s1">15$</span> <span>8$</span></p>
                         <button type="button" class="btn btn-primary">Comprar</button>
                     </div>
@@ -191,12 +191,14 @@
             </section>
         </main>
         <footer class="footer">
-            <p class="footer__subt">Seguinos en nuestras redes</p>
+            <p class="footer__subt">Nuestras redes</p>
             <div>
                 <a href="https://es-la.facebook.com" Target="_blank"><img src="img/logo-face.png"
                         alt="logo de facebook"></a>
                 <a href="https://www.instagram.com" Target="_blank"><img src="img/logo-insta.png"
                         alt="logo de instagram"></a>
+                        <a href="https://www.twitter.com" Target="_blank"><img src="img/logo-twitter.png"
+                            alt="logo de twitter"></a>
             </div>
             <p>Todos los derechos reservados</p>
         </footer>
