--- a/pages/contact.html
+++ b/pages/contact.html
@@ -136,12 +136,14 @@
             </div>
         </main>
         <footer class="footer">
-            <p class="footer__subt">Seguinos en nuestras redes</p>
+            <p class="footer__subt">Nuestras redes</p>
             <div>
                 <a href="https://es-la.facebook.com" Target="_blank"><img src="../img/logo-face.png"
                         alt="logo de facebook"></a>
                 <a href="https://www.instagram.com" Target="_blank"><img src="../img/logo-insta.png"
                         alt="logo de instagram"></a>
+                        <a href="https://www.twitter.com" Target="_blank"><img src="../img/logo-twitter.png"
+                            alt="logo de twitter"></a>
             </div>
             <p>Todos los derechos reservados</p>
         </footer>
