--- a/pages/nos.html
+++ b/pages/nos.html
@@ -99,13 +99,15 @@
                     Ricardo Rodriguez en su afan de crear y diseñar</p>
                 <img src="../img/imgNos.jpg" alt="La buena atención" class="contenedornos__img">
             </main>
-            <footer class=" footer">
-                <p class="footer__subt">Seguinos en nuestras redes</p>
+            <footer class="footer">
+                <p class="footer__subt">Nuestras redes</p>
                 <div>
                     <a href="https://es-la.facebook.com" Target="_blank"><img src="../img/logo-face.png"
                             alt="logo de facebook"></a>
                     <a href="https://www.instagram.com" Target="_blank"><img src="../img/logo-insta.png"
                             alt="logo de instagram"></a>
+                            <a href="https://www.twitter.com" Target="_blank"><img src="../img/logo-twitter.png"
+                                alt="logo de twitter"></a>
                 </div>
                 <p>Todos los derechos reservados</p>
             </footer>
