--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <nav class="navbar navbar-expand-sm nav1">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html"><img src="img/ELaisa-Logo.png"
-                            alt="Logo de la Marca Elaisa" class="d-md-none d-sm-inline logo"></a>
+                            alt="Logo de la Marca Elaisa" class="logo"></a>
                     <button class="btn-primary boton" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><img src="img/nav__icon.png"
                             alt="icono nav"></button>
@@ -88,28 +88,23 @@
         </header>
         <main class="mainindex">
             <section class="mainindex__sec1">
-                <video src="video/vid-index.gif" autoplay loop muted
-                    class="mainindex__sec1__video" alt="video de un oceanao">
-                </video>
+                <img src="img/imgindex.jpg" alt="imagen de mar">
             </section>
             <section class="mainindex__sec2">
-                <img src="img/ELaisa-Logo.png" alt="Logo de la Marca Elaisa"
-                    class="mainindex__sec2__logo">
+                <img src="img/ELaisa-Logo.png" alt="Logo de la Marca Elaisa" class="mainindex__sec2__logo">
                 <p>CALIDAD Y CONFORT A LA DISPOSICION DEL CLIENTE</p>
             </section>
             <section class="mainindex__sec3">
                 <h1>Ofertas de temporada</h1>
                 <div class="mainindex__sec3__contenedorpro">
                     <div class="mainindex__sec3__contenedorpro__hijo">
-                        <img src="img/ofer1.png"
-                            alt="remera celeste conm rayas blancas">
+                        <img src="img/ofer1.png" alt="remera celeste conm rayas blancas">
                         <h2>LightC</h2>
                         <p><span class="s1">20$</span> <span>15$</span></p>
                         <button type="button" class="btn btn-primary">Comprar</button>
                     </div>
                     <div class="mainindex__sec3__contenedorpro__hijo">
-                        <img src="img/ofer2.png"
-                            alt="jean azul oscuro">
+                        <img src="img/ofer2.png" alt="jean azul oscuro">
                         <h2>JeansD</h2>
                         <p><span class="s1">30$</span> <span>20$</span></p>
                         <button type="button" class="btn btn-primary">Comprar</button>
@@ -197,10 +192,11 @@
                         alt="logo de facebook"></a>
                 <a href="https://www.instagram.com" Target="_blank"><img src="img/logo-insta.png"
                         alt="logo de instagram"></a>
-                        <a href="https://www.twitter.com" Target="_blank"><img src="img/logo-twitter.png"
-                            alt="logo de twitter"></a>
+                <a href="https://www.twitter.com" Target="_blank"><img src="img/logo-twitter.png"
+                        alt="logo de twitter"></a>
             </div>
             <p>Todos los derechos reservados</p>
+            <p>Designed byBautista Tosi</p>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
