media querie de tablet

--- a/pages/nos.html
+++ b/pages/nos.html
@@ -95,7 +95,7 @@
                         a poco, se fue ganando renombre entre las marcas locales hasta llegar a un nivel mundial.
                     </p>
                 </div>
-                <p class="contenedornos__p2 d-md-none d-sm-inline">Elaisa es una marca de ropa creada en 1980 por
+                <p class="contenedornos__p2">Elaisa es una marca de ropa creada en 1980 por
                     Ricardo Rodriguez en su afan de crear y diseñar</p>
                 <img src="../img/imgNos.jpg" alt="La buena atención" class="contenedornos__img">
             </main>
@@ -110,6 +110,7 @@
                                 alt="logo de twitter"></a>
                 </div>
                 <p>Todos los derechos reservados</p>
+                <p>Diseñado por Bautista Tosi</p>
             </footer>
     </div>
 
