--- a/pages/pro.html
+++ b/pages/pro.html
@@ -173,6 +173,7 @@
                             alt="logo de twitter"></a>
             </div>
             <p>Todos los derechos reservados</p>
+            <p>Diseñado por Bautista Tosi</p>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
