--- a/pages/proy.html
+++ b/pages/proy.html
@@ -101,10 +101,11 @@
             </section>
             <section class="mainproy__sec"><img src="../img/proyecto3.jpg" alt="">
                 <h2>Cuidar el agua del mundo</h2>
-                <p>Desde nustras compañia queremos concientizar sobre el uso que le damos al agua de manera cotidiana
-                    remarcando continuamente los cuidados que se deben tomar para la protección de esta. <span
-                        class="mainproy__sec__span">Debido a su alta importancia tanto en las casas de las personas como
-                        en las actividades economicas.</span></p>
+                <p>Desde nustras compañia queremos concientizar sobre el uso que le damos al agua de manera cotidiana.
+                    <span class="mainproy__sec__span"> Remarcando continuamente los cuidados que se deben tomar para la
+                        protección de esta. Debido a su alta importancia tanto en las casas de las personas como
+                        en las actividades economicas.</span>
+                </p>
             </section>
         </main>
         <footer class="footer">
@@ -114,10 +115,11 @@
                         alt="logo de facebook"></a>
                 <a href="https://www.instagram.com" Target="_blank"><img src="../img/logo-insta.png"
                         alt="logo de instagram"></a>
-                        <a href="https://www.twitter.com" Target="_blank"><img src="../img/logo-twitter.png"
-                            alt="logo de twitter"></a>
+                <a href="https://www.twitter.com" Target="_blank"><img src="../img/logo-twitter.png"
+                        alt="logo de twitter"></a>
             </div>
             <p>Todos los derechos reservados</p>
+            <p>Diseñado por Bautista Tosi</p>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
