proyecto realizado con medias desk, tablet y mobile, paletas de colores y contenidos de la clase

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -130,8 +130,8 @@
                         placeholder="Escribe sobre lo que quieras...">
                 </div>
                 <div class="main__caja__bot">
-                    <input class="reset" type="reset">
-                    <input class="submit" type="submit">
+                    <input class="rese" type="reset">
+                    <input class="submi" type="submit">
                 </div>
             </div>
         </main>
